fixed: login page input on mobile and web browser

--- a/front-end/src/Styles/Login.css
+++ b/front-end/src/Styles/Login.css
@@ -1,83 +1,40 @@
-form{
-  display: grid;
-  grid-template-columns: 1 1fr ;
-  margin: 0 auto;
-  width: 100%;
-  padding-left: 220px;
-  /* margin-top: 100px; */
-  position: absolute;
-  
-  }
-  
-  .form-container{
+
+.form-container{
+    display:initial;
     text-align: center;
-    /* padding-top: 100px; */
-    margin-left: 200px;
-      margin-bottom: 20px;
+    margin-left: 500px;
+    margin-right: 500px;
+    margin-bottom: 220px;
+  }
+  #login-form{
+    margin: 200px;
+  }
+  #username{
+    margin: 15px;
   }
   
-  input{
-      height: 40px;
-      width: 600px;
-      padding: 20px;
-      margin: 10px;
-  }
-  
-  .submit-btn{
-     margin: 0 auto;
-     margin-bottom: 10px;
-     background-color: rgb(91, 201, 203);
-     border: none;
-     color: rgb(255, 255, 255);
-     padding: 15px 32px;
-     text-align: center;
-     font-size: 16px;
-     border-radius: 8px;
-     transition-duration: 0.2s;
-     line-height: 100%;
-  }
-  
-  .submit-btn:hover{
-    color: white;
-    background-color: #4CAF50;
-  }
-  
-  .sign-up-btn-container{
-    position: relative;
-    text-align: center;
-    margin: 10px;
-  }
-  
-  .sign-up-btn{
-      color: black;
-      text-decoration: none;
-  }
-  
-  .sign-up-btn:hover{
-    color:rgb(91, 201, 203);
+  #password{
+    margin: 15px;
   }
   
   @media only screen and (max-width: 600px) {
-    form{
-      display: grid;
-      grid-template-columns: 1 1fr;
-      margin: 0 auto;
-      width: 300px;
-      padding: 42px;
-      /* margin-top: 100px; */
-      position: fixed;
-      }
-  
-      input{
-        height: 40px;
-        width: 270px;
-        padding: 20px;
-        margin: 10px;
-    }
-  
-    .form-container{
-      text-align: center;
-      margin-left: 0px;
-        margin-bottom: 20px;
-    }
+   .form-container{
+    /* border: 1px solid rgb(193, 193, 193); */
+    display: inline-block;
+    text-align: center;
+    margin: 50px;
+    padding-top: 100px;
+    padding-bottom: 225px;
+  }
+  #login-form{
+    border: 1px solid rgba(0, 0, 0, 0);
+    margin: 10px;
+  }
+  .submit-btn{
+    margin: 20px;
+  }
+  .sign-up-link-container{
+    margin: 20px;
+  }
+
   }
